Switched themed assets. Using bevy-parallax.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ version = "0.1.0"
 
 [dependencies]
 bevy = "0.6.1"
+bevy-parallax = "0.1.0"
 heron = {git = "https://github.com/jcornaz/heron.git", features = ["2d", "debug-2d"]}
