--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ version = "0.1.0"
 [dependencies]
 bevy = "0.7.0"
 bevy-parallax = "0.1.2"
-heron = {version = "3.0.0", features = ["2d", "debug-2d"]}
+bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
