--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ version = "0.1.0"
 bevy = "0.7.0"
 bevy-parallax = "0.1.2"
 bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
+# bevy_egui = "0.14.0"
