pulled iyes_loopless, bevy_egui, implemented gamestates and pause menu

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ version = "0.1.0"
 bevy = "0.7.0"
 bevy-parallax = "0.1.2"
 bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
-# bevy_egui = "0.14.0"
+iyes_loopless = "0.6.1"
+bevy_egui = "0.14"
 
 # Enable optimizations for dependencies but not for our code
 [profile.dev.package."*"]
