--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,18 @@
 edition = "2021"
 name = "littlefighter2"
 version = "0.1.0"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.58"
 bevy = "0.7.0"
 bevy-parallax = "0.1.2"
+bevy_egui = "0.14"
 bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
 iyes_loopless = "0.6.1"
-bevy_egui = "0.14"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_yaml = "0.8.24"
+thiserror = "1.0.31"
 
 # Enable optimizations for dependencies but not for our code
 [profile.dev.package."*"]
