--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ structopt = "0.3.26"
 
 bevy_mod_debugdump = { version = "0.4", optional = true }
 bevy-inspector-egui = { version = "0.11", optional = true }
-
+bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }
 [features]
 default = []
-debug = ["bevy-inspector-egui"]
+debug = ["bevy-inspector-egui", "bevy-inspector-egui-rapier"]
 schedule_graph = ["bevy_mod_debugdump"]
 
 # Enable optimizations for dependencies but not for our code
