--- a/assets/fighters/sharky/sharky.fighter.yaml
+++ b/assets/fighters/sharky/sharky.fighter.yaml
@@ -13,9 +13,17 @@ spritesheet:
 
   animation_fps: 0.12
   animations:
-    idle: [0, 13]
-    running: [14, 19]
-    knocked_right: [85, 90]
-    knocked_left: [71, 76]
-    dying: [71, 76]
-    attacking: [85, 90]
+    idle: 
+      frames: [0, 13]
+      repeat: true
+    running: 
+      frames: [14, 19]
+      repeat: true
+    knocked_right: 
+      frames: [85, 90]
+    knocked_left:
+      frames: [71, 76]
+    dying:
+      frames: [71, 76]
+    attacking:
+      frames: [85, 90]
