--- a/assets/beach/beach.level.yaml
+++ b/assets/beach/beach.level.yaml
@@ -42,7 +42,7 @@ parallax_background:
       scale: 0.9
       transition_factor: 0.9
 
-player_spawn:
+player:
   fighter: /fighters/fishy/fishy.fighter.yaml
   location: [0, 0, 0]
 
