--- a/assets/default.game.yaml
+++ b/assets/default.game.yaml
@@ -3,24 +3,59 @@ camera_height: 448
 
 main_menu:
   title: "Fish Fight\nPunchy"
-  title_font: ark
+  title_font:
+    family: ark
+    color: [0, 0, 0]
+    size: 55
 
   background_image:
     image: ui/main-menu-background.png
-    size: [1919, 1027]
+    image_size: [1919, 1027]
 
 ui_theme:
-  fonts:
+  font_families:
     ark: ui/ark-pixel-16px-latin.ttf
 
-  font_sizes:
-    jumbo: 45
-    big: 35
-    normal: 15
-    small: 10
+  font_styles:
+    heading:
+      family: ark
+      size: 30
+      color: [0, 0, 0]
+
+  hud:
+    font:
+      family: ark
+      size: 15
+      color: [255, 255, 255]
+
+    player_hud_width: 165
+
+    portrait_frame:
+      image: ui/green-board.png
+      image_size: [32, 32]
+      border_size:
+        top: 8
+        left: 8
+        right: 8
+        bottom: 8
+
+    lifebar:
+      height: 16
+      background_image:
+        image: ui/lifebar.png
+        image_size: [19, 7]
+        border_size:
+          left: 3
+          right: 3
+          top: 3
+          bottom: 3
+        scale: 2
+      progress_image:
+        image: ui/lifebar-progress.png
+        image_size: [1, 1]
 
   panel:
-    text_color: [51, 40, 40]
+    font_color: [51, 40, 40]
     padding:
       top: 30
       bottom: 30
@@ -36,31 +71,63 @@ ui_theme:
         right: 11
       scale: 4.0
 
-  button:
-    text_color: [255, 255, 255]
+  button_styles:
+    jumbo:
+      font:
+        family: ark
+        color: [255, 255, 255]
+        size: 30
+      padding:
+        top: 12
+        left: 12
+        right: 12
+        bottom: 16
+      borders:
+        default:
+          image: ui/green-button.png
+          image_size: [14, 14]
+          border_size:
+            top: 5
+            bottom: 5
+            right: 5
+            left: 5
+          scale: 3
+        clicked:
+          image: ui/green-button-down.png
+          image_size: [14, 14]
+          border_size:
+            top: 5
+            bottom: 5
+            right: 5
+            left: 5
+          scale: 3
 
-    font: ark
-    padding:
-      top: 12
-      left: 12
-      right: 12
-      bottom: 16
-    borders:
-      default:
-        image: ui/green-button.png
-        image_size: [14, 14]
-        border_size:
-          top: 5
-          bottom: 5
-          right: 5
-          left: 5
-        scale: 3
-      clicked:
-        image: ui/green-button-down.png
-        image_size: [14, 14]
-        border_size:
-          top: 5
-          bottom: 5
-          right: 5
-          left: 5
-        scale: 3
+    normal:
+      font:
+        family: ark
+        color: [255, 255, 255]
+        size: 20
+      padding:
+        top: 8
+        left: 8
+        right: 8
+        bottom: 10
+      borders:
+        default:
+          image: ui/green-button.png
+          image_size: [14, 14]
+          border_size:
+            top: 5
+            bottom: 5
+            right: 5
+            left: 5
+          scale: 2
+        clicked:
+          image: ui/green-button-down.png
+          image_size: [14, 14]
+          border_size:
+            top: 5
+            bottom: 5
+            right: 5
+            left: 5
+          scale: 2
