--- a/assets/fighters/bandit/bandit.fighter.yaml
+++ b/assets/fighters/bandit/bandit.fighter.yaml
@@ -5,6 +5,11 @@ stats:
   damage: 35
   movement_speed: 150
 
+hud:
+  portrait:
+    image: portrait.png
+    image_size: [35, 35]
+
 spritesheet:
   image: FishFight_BanditAnimation_skin2.png
   tile_size: [64, 64]
