--- a/assets/fighters/fishy/fishy.fighter.yaml
+++ b/assets/fighters/fishy/fishy.fighter.yaml
@@ -1,9 +1,14 @@
-name: Fishy
+name: Fishy The Fearsome
 
 stats:
   health: 100
   damage: 35
   movement_speed: 150
+
+hud:
+  portrait:
+    image: portrait.png
+    image_size: [35, 35]
 
 spritesheet:
   image: PlayerFishy(96x80).png
@@ -13,13 +18,13 @@ spritesheet:
 
   animation_fps: 0.12
   animations:
-    idle: 
+    idle:
       frames: [0, 13]
       repeat: true
-    running: 
+    running:
       frames: [14, 19]
       repeat: true
-    knocked_right: 
+    knocked_right:
       frames: [85, 90]
     knocked_left:
       frames: [71, 76]
