--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ getrandom = { version = "0.2", features = ["js"] }
 bevy_mod_debugdump = { version = "0.4", optional = true }
 bevy-inspector-egui = { version = "0.11", optional = true }
 bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }
+leafwing_input_manager = { git = "https://github.com/zicklag/leafwing-input-manager.git", rev = "45c40f3d" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features=["Window"] }
@@ -42,4 +43,7 @@ opt-level = 1
 lto = true
 codegen-units = 1 # Improves physics performance for release builds
 
-#TODO turn this into a debug feature
+[patch.crates-io]
+# Patch to enable improved DPad support. It's a merge of the following PR to Bevy 0.7.0 so we can
+# use it before 0.8 is release: https://github.com/bevyengine/bevy/pull/5220.
+bevy_gilrs = { git = "https://github.com/zicklag/bevy.git", branch = "v0.7.0-dpad-patch" }
