added waiting state, random chance to not attack, temp sprite for attack

--- a/assets/fighters/bandit/bandit.fighter.yaml
+++ b/assets/fighters/bandit/bandit.fighter.yaml
@@ -30,5 +30,8 @@ spritesheet:
       frames: [40, 46]
     dying:
       frames: [40, 46]
+    waiting:
+      frames: [0, 7]
+      repeat: false
     attacking:
       frames: [16, 23]
