--- a/assets/fighters/slinger/slinger.fighter.yaml
+++ b/assets/fighters/slinger/slinger.fighter.yaml
@@ -30,5 +30,8 @@ spritesheet:
       frames: [40, 46]
     dying:
       frames: [40, 46]
+    waiting:
+      frames: [0, 3]
+      repeat: false
     attacking:
       frames: [16, 20]
