--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ bevy_mod_debugdump = { version = "0.4", optional = true }
 bevy-inspector-egui = { version = "0.11", optional = true }
 bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }
 leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "c12d7a8" }
+unic-langid = "0.9.0"
+bevy_fluent = { git = "https://github.com/kgv/bevy_fluent", rev = "d41f514" }
+sys-locale = "0.2.1"
+fluent = "0.16.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features=["Window"] }
