--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ sys-locale = "0.2.1"
 fluent = "0.16.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3", features=["Window"] }
+web-sys = { version = "0.3", features=["Window", "Location"] }
 
 [features]
 default = []
