CI: Add Clippy correctness checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,23 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+  clippy_correctness_checks:
+    runs-on: ubuntu-latest
+    name: Clippy correctness checks
+    steps:
+      - name: Install Alsa dev library
+        run: sudo apt install libasound2-dev libudev-dev
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: -- -W clippy::correctness -D warnings
