--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,11 @@ unic-langid = "0.9.0"
 bevy_fluent = { git = "https://github.com/kgv/bevy_fluent", rev = "d41f514" }
 sys-locale = "0.2.1"
 fluent = "0.16.0"
+directories = "4.0.1"
+async-channel = "1.6.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3", features=["Window", "Location"] }
+web-sys = { version = "0.3", features=["Window","Location","Storage"] }
 
 [features]
 default = []
