Use strip = true For Release Profile in Cargo.toml
Co-authored-by: Saverio Miroddi <saverio.pub2@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ debug = false
 opt-level = 1
 
 [profile.release]
+strip = true
 lto = true
 codegen-units = 1 # Improves physics performance for release builds
 
