--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.58"
 bevy = "0.7.0"
 bevy-parallax = "0.1.2"
 bevy_egui = "0.14"
+egui_extras = "0.18.0"
 bevy_kira_audio = { version = "0.10.0", features = ["mp3"] }
 bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
 iyes_loopless = "0.6.1"
