--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-edition = "2021"
 name = "punchy"
 version = "0.1.0"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A 2.5D side-scroller beatemup"
+authors = ["The Fish Fight Game & Spicy Lobster Developers"]
+license = "MIT OR Apache-2.0"
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
