Minor updates to workflows, mostly cosmetic
- Update checkout action version
- Remove apt-get --allow-unauthenticated option, which is not relevant in this context
- Change apt-get mode from very quiet to quiet, since some messages may be useful (e.g. package already installed)
- Made the two dependency installation jobs the same
- Make tags pattern consistent across cd and web-dem

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set the release version
         shell: bash
@@ -31,8 +31,7 @@ jobs:
         if: matrix.config.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install \
-            --allow-unauthenticated -y -qq \
+          sudo apt-get install -y -q \
               libasound2-dev \
               libudev-dev
 
@@ -100,7 +99,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Download Artifacts
         uses: actions/download-artifact@v2
