Implement First Pass Script Execution
- Added TypeScript and JavaScript asset loaders
- Added script loading and hot reloading
- Added log API

--- a/assets/default.game.yaml
+++ b/assets/default.game.yaml
@@ -4,6 +4,9 @@ camera_height: 448
 # For simplicity, this value can also be used for movement limitation calculations.
 camera_move_right_boundary: 150.
 
+scripts:
+  - scripts/test1.ts
+
 main_menu:
   title_font:
     family: ark
