--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ fluent = "0.16.0"
 directories = "4.0.1"
 async-channel = "1.6.1"
 once_cell = "1.13.0"
+deno_core = "0.144.0"
+deno_ast = { version = "0.17.0", features = ["transpiling"] }
 
 # Waiting for updates to Bevy 0.8
 # bevy_mod_debugdump = { version = "0.4", optional = true }
