--- a/assets/beach/beach.level.yaml
+++ b/assets/beach/beach.level.yaml
@@ -58,6 +58,10 @@ enemies:
     location: [200, -10, 0]
   - fighter: *bandit
     location: [250, -50, 0]
+  - fighter: &brute /fighters/brute/brute.fighter.yaml
+    location: [400, -30, 0]
+  - fighter: *brute
+    location: [450, 20, 0]
 
 items:
   - item: &bottle /items/bottle/bottle.item.yaml
