--- a/assets/fighters/brute/brute.fighter.yaml
+++ b/assets/fighters/brute/brute.fighter.yaml
@@ -1,9 +1,9 @@
-name: Slinger
+name: Bandit
 
 stats:
-  health: 100
-  damage: 35
-  movement_speed: 150
+  health: 200
+  damage: 50
+  movement_speed: 50
 
 hud:
   portrait:
@@ -11,9 +11,9 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [Slinger_Skin1.png, Slinger_Skin2.png, Slinger_Skin3.png]
-  tile_size: [80, 80]
-  columns: 7
+  image: [Brute_Skin1.png, Brute_Skin2.png, Brute_Skin3.png]
+  tile_size: [64, 64]
+  columns: 8
   rows: 6
 
   animation_fps: 0.12
@@ -22,19 +22,19 @@ spritesheet:
       frames: [0, 3]
       repeat: true
     running:
-      frames: [7, 10]
+      frames: [8, 11]
       repeat: true
     knocked_right:
-      frames: [35, 41]
+      frames: [40, 46]
     knocked_left:
-      frames: [35, 41]
+      frames: [40, 46]
     dying:
-      frames: [35, 41]
+      frames: [40, 46]
     waiting:
       frames: [0, 3]
       repeat: false
     attacking:
-      frames: [14, 18]
+      frames: [16, 23]
 
 audio:
   effects: {}
