--- a/.github/workflows/web-demo.yml
+++ b/.github/workflows/web-demo.yml
@@ -41,6 +41,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: gh-pages
-          folder: target/wasm-dist
+          folder: web-target/web-dist
           target-folder: demo
           ssh-key: ${{ secrets.MASTER_GH_PAGES_DEPLOY_KEY }}
