--- a/.github/workflows/web-demo.yml
+++ b/.github/workflows/web-demo.yml
@@ -3,7 +3,6 @@ name: Publish Web Demo
 on:
   push:
     tags:
-      - web-demo
       - 'v*'
 jobs:
   publish-web-demo:
@@ -34,13 +33,29 @@ jobs:
         with:
           version: '0.2.81'
 
-      - name: Build WASM Dist 🔨
-        run: just build-release-web /punchy/demo
+      - name: Build WASM Release 🔨
+        run: just build-release-web
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: gh-pages
-          folder: target/wasm-dist
-          target-folder: demo
+          folder: web-target/wasm-release
+          target-folder: player/${{ github.ref_name }}
           ssh-key: ${{ secrets.MASTER_GH_PAGES_DEPLOY_KEY }}
+
+      - name: Symlink Latest Build
+        run: |
+          mkdir latest-symlink-dir
+          ln -s ./${{ github.ref_name }} latest
+          mv latest latest-symlink-dir
+
+      - name: Deploy Symlinked Latest Build 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.3
+        with:
+          branch: gh-pages
+          folder: latest-symlink-dir
+          clean: false
+          target-folder: player
+          ssh-key: ${{ secrets.MASTER_GH_PAGES_DEPLOY_KEY }}
+      
