--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,9 @@ async-channel = "1.6.1"
 once_cell = "1.13.0"
 deno_core = "0.144.0"
 deno_ast = { version = "0.17.0", features = ["transpiling"] }
+async-lock = "2.5.0"
+dashmap = "5.3.4"
+cismute = "0.1.2"
 
 # Waiting for updates to Bevy 0.8
 # bevy_mod_debugdump = { version = "0.4", optional = true }
@@ -66,8 +69,6 @@ default = []
 [profile.dev.package."*"]
 opt-level = 3
 debug = false
-
-[profile.dev]
 # As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
 # profiling a (incremental) build showed that the large part of the time is spent in optimization
 # passes.
