--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ sys-locale = "0.2.1"
 fluent = "0.16.0"
 directories = "4.0.1"
 async-channel = "1.6.1"
+once_cell = "1.13.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window","Location","Storage"] }
