--- a/assets/beach/beach.level.yaml
+++ b/assets/beach/beach.level.yaml
@@ -50,24 +50,10 @@ players:
     location: [-70, 30, 0]
 
 enemies:
-  - fighter: &slinger /fighters/slinger/slinger.fighter.yaml
-    location: [325, 0, 0]
-    trip_point_x: -1
-  - fighter: *slinger
-    location: [225, 50, 0]
-    trip_point_x: -1
-  - fighter: &bandit /fighters/bandit/bandit.fighter.yaml
-    location: [225, -10, 0]
-    trip_point_x: -1
-  - fighter: *bandit
-    location: [275, -50, 0]
-    trip_point_x: -1
-  - fighter: &brute /fighters/brute/brute.fighter.yaml
-    location: [400, -30, 0]
-    trip_point_x: -1
-  - fighter: *brute
+  - fighter: /fighters/big_bass/big_bass.fighter.yaml
     location: [450, 20, 0]
     trip_point_x: 300
+    boss: true
 
 items:
   - item: &bottle /items/bottle/bottle.item.yaml
