Re-enable The bevy_gilrs Feature
Accidentally disabled when we removed default features of Bevy.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ default-features = false
 features = [
     "x11",
     "png",
-    "filesystem_watcher"
+    "filesystem_watcher",
+    "bevy_gilrs"
 ]
 
 [dependencies]
