--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ structopt = "0.3.26"
 rand = "0.8.5"
 getrandom = { version = "0.2", features = ["js"] }
 
-leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", default-features = false, branch = "dev" }
+leafwing-input-manager = { version = "0.5", default-features = false }
 unic-langid = "0.9.0"
 bevy_fluent = { git = "https://github.com/kgv/bevy_fluent.git" }
 sys-locale = "0.2.1"
@@ -49,17 +49,17 @@ async-channel = "1.6.1"
 once_cell = "1.13.0"
 
 # Waiting for updates to Bevy 0.8
-# bevy_mod_debugdump = { version = "0.4", optional = true }
-# bevy-inspector-egui = { version = "0.11", optional = true }
-# bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }
+bevy_mod_debugdump = { version = "0.5.0", optional = true }
+bevy-inspector-egui = { version = "0.12.1", optional = true }
+bevy-inspector-egui-rapier = { version = "0.5.0", optional = true, features = ["rapier2d"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window","Location","Storage"] }
 
 [features]
 default = []
-# Waiting for update to Bevy 0.8
-# schedule_graph = ["bevy_mod_debugdump"]
+debug = ["bevy_mod_debugdump", "bevy-inspector-egui", "bevy-inspector-egui-rapier"]
+schedule_graph = ["bevy_mod_debugdump"]
 
 # Enable optimizations for dependencies but not for our code
 [profile.dev.package."*"]
