--- a/assets/items/health/health.item.yaml
+++ b/assets/items/health/health.item.yaml
@@ -1,5 +1,8 @@
 name: Health
 
 image:
-    image: health.png
-    image_size: [22, 20]
+  image: health.png
+  image_size: [22, 20]
+
+kind: !Health
+  health: 1000000 # Refill all of it
