--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ getrandom = { version = "0.2", features = ["js"] }
 
 leafwing-input-manager = { version = "0.5", default-features = false }
 unic-langid = "0.9.0"
-bevy_fluent = { git = "https://github.com/kgv/bevy_fluent.git" }
+bevy_fluent = "0.4.0"
 sys-locale = "0.2.1"
 fluent = "0.16.0"
 directories = "4.0.1"
