--- a/assets/fighters/bandit/bandit.fighter.yaml
+++ b/assets/fighters/bandit/bandit.fighter.yaml
@@ -36,6 +36,15 @@ spritesheet:
     attacking:
       frames: [14, 17]
 
+attack:
+  name: "punch"
+  frames:
+    startup: 1
+    active: 2
+    recovery: 3
+  hitbox: [12, 12]
+  hitbox_offset: [24, 0]
+
 audio:
   effects:
     attacking:
