--- a/assets/fighters/fishy/fishy.fighter.yaml
+++ b/assets/fighters/fishy/fishy.fighter.yaml
@@ -33,6 +33,15 @@ spritesheet:
     attacking:
       frames: [85, 90]
 
+attack:
+  name: "punch"
+  frames:
+    startup: 1
+    active: 2
+    recovery: 4
+  hitbox: [16, 16]
+  hitbox_offset: [24, 0]
+
 audio:
   effects:
     attacking:
