Rebase Boss MVP by @edgarssilva
Rebases #200 onto the latest master, with a couple subjective tweaks:

- Make boss flag in YAML a `bool` instead of an `Option<bool>
- Impl HasLoadProgress for `bool` instead of ignoring the `boss` field
  in the metata struct.

Co-authored by: Edgar Soares da Silva <70528288+edgarssilva@users.noreply.github.com>

--- a/assets/beach/beach.level.yaml
+++ b/assets/beach/beach.level.yaml
@@ -68,9 +68,10 @@ enemies:
   - fighter: *brute
     location: [450, 20, 0]
     trip_point_x: 300
-  - fighter: *brute
+  - fighter: /fighters/big_bass/big_bass.fighter.yaml
     location: [1000, 20, 0]
     trip_point_x: 700
+    boss: true
 
 stop_points: [500, 1000]
 
