--- a/assets/fighters/slinger/slinger.fighter.yaml
+++ b/assets/fighters/slinger/slinger.fighter.yaml
@@ -35,6 +35,15 @@ spritesheet:
       repeat: false
     attacking:
       frames: [14, 18]
+# this should be changed to a ranged attack
+attack:
+  name: "punch"
+  frames:   
+    startup: 1
+    active: 2
+    recovery: 3
+  hitbox: [12, 12]
+  hitbox_offset: [24, 0]
 
 # this should be changed to a ranged attack
 attack:
