--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,17 +48,16 @@ directories = "4.0.1"
 async-channel = "1.6.1"
 once_cell = "1.13.0"
 
-# Waiting for updates to Bevy 0.8
+# Debug tools
+bevy-inspector-egui = { version = "0.12.1" }
+bevy-inspector-egui-rapier = { version = "0.5.0", features = ["rapier2d"] }
 bevy_mod_debugdump = { version = "0.5.0", optional = true }
-bevy-inspector-egui = { version = "0.12.1", optional = true }
-bevy-inspector-egui-rapier = { version = "0.5.0", optional = true, features = ["rapier2d"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window","Location","Storage"] }
 
 [features]
 default = []
-debug = ["bevy_mod_debugdump", "bevy-inspector-egui", "bevy-inspector-egui-rapier"]
 schedule_graph = ["bevy_mod_debugdump"]
 
 # Enable optimizations for dependencies but not for our code
