--- a/assets/fighters/brute/brute.fighter.yaml
+++ b/assets/fighters/brute/brute.fighter.yaml
@@ -1,5 +1,9 @@
 name: Brute
 
+hurtbox:
+  size: [24, 12]
+  offset: [0, 0]
+
 stats:
   max_health: 200
   movement_speed: 50
@@ -42,8 +46,9 @@ attack:
     startup: 2
     active: 3
     recovery: 7
-  hitbox: [12, 12]
-  hitbox_offset: [24, 0]
+  hitbox:
+    size: [24, 24]
+    offset: [24, 0]
 
 audio:
   effects: {}
