--- a/assets/fighters/dev/dev.fighter.yaml
+++ b/assets/fighters/dev/dev.fighter.yaml
@@ -1,4 +1,4 @@
-name: Scrumptious Sharky
+name: Dev
 
 size: [36, 48]
 
@@ -16,10 +16,13 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [PlayerSharky(96x80).png]
+  #right now load/spawn selects a spritesheet randomly from all available.
+  #want to change this so that individual animations can be specified to correspond to ranges and spritesheet
+  #or maybe not
+  image: [PlayerDev96x80.png]
   tile_size: [96, 80]
-  columns: 14
-  rows: 7
+  columns: 15
+  rows: 14
 
   animation_fps: 0.12
   animations:
