Changed yaml box name

--- a/assets/items/box/box.item.yaml
+++ b/assets/items/box/box.item.yaml
@@ -4,7 +4,7 @@ image:
     image: box.png
     image_size: [32, 32]
 
-kind: !Box
+kind: !BreakableBox
     hits: 10
     hurtbox:
         size: [36, 52]
