updated spritesheets to take a 16 pixel padding below character idle feet, updated sprite anchor and collision offset to account for padding

--- a/assets/fighters/brute/brute.fighter.yaml
+++ b/assets/fighters/brute/brute.fighter.yaml
@@ -14,8 +14,9 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [Brute_Skin1.png, Brute_Skin2.png, Brute_Skin3.png]
-  tile_size: [64, 64]
+  image:
+    [brute_base_64_80.png, brute_eyepatch_64_80.png, brute_helmet_64_80.png]
+  tile_size: [64, 80]
   columns: 8
   rows: 6
 
