--- a/assets/fighters/big_bass/big_bass.fighter.yaml
+++ b/assets/fighters/big_bass/big_bass.fighter.yaml
@@ -14,8 +14,8 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [BigBass.png]
-  tile_size: [156, 176]
+  image: [bass_base_156_192.png]
+  tile_size: [156, 192]
   columns: 15
   rows: 3
 
