--- a/assets/fighters/fishy/fishy.fighter.yaml
+++ b/assets/fighters/fishy/fishy.fighter.yaml
@@ -14,7 +14,7 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [PlayerFishy(96x80).png]
+  image: [fishy_base_96_80.png]
   tile_size: [96, 80]
   columns: 14
   rows: 7
